--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web-app
+  name: demopipeline
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: web-app
+      app: demopipeline
   template:
     metadata:
       labels:
-        app: web-app
+        app: demopipeline
     spec:
       containers:
-        - name: web-app
+        - name: demopipeline
           image: sample-app
           ports:
             - containerPort: 80
@@ -21,11 +21,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: web-app
+  name: demopipeline
 spec:
   type: LoadBalancer
   selector:
-    app: web-app
+    app: demopipeline
   ports:
     - port: 80
       targetPort: 80
